crates/shipper/src/plan/levels/snapshots/shipper__plan__levels__snapshot_tests__snapshot_all_independent.snap
---
source: crates/shipper-levels/src/lib.rs
expression: level_summary(&levels)
---
- - 0
  - - alpha
    - beta
    - gamma
