crates/shipper/src/plan/levels/snapshots/shipper__plan__levels__snapshot_tests__snapshot_disconnected_components.snap
---
source: crates/shipper-levels/src/lib.rs
expression: level_summary(&levels)
---
- - 0
  - - alpha
    - gamma
- - 1
  - - beta
    - delta
